与教师端主界面进行联通