@@ -1,6 +1,7 @@
 package com.code.controller;
 
 
+import com.alibaba.fastjson.JSONObject;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.code.pojo.*;
 import com.code.service.*;
@@ -11,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * <p>
@@ -25,7 +27,6 @@ import java.util.*;
 @RequestMapping("/teacher")
 public class TeacherController {
 
-
     private final Logger log = LoggerFactory.getLogger(TeacherController.class);
     private final ClazzTeacherService clazzTeacherService;
 
@@ -36,25 +37,36 @@ public class TeacherController {
 
     private final ItemsetService itemsetService;
 
+    private final PersonalinformationService infoService;
+
+    private final ItemItemsetService itemItemSetService;
+
+    private final TeacherService teacherService;
+
+    private final TStudentService studentService;
+
     @Autowired
-    public TeacherController(ClazzTeacherService clazzTeacherService, ItemService itemService, ClazzService clazzService, TeacherTopicsetService teacherTopicsetService, ItemsetService itemsetService) {
+    public TeacherController(ClazzTeacherService clazzTeacherService, ItemService itemService, ClazzService clazzService, TeacherTopicsetService teacherTopicsetService, ItemsetService itemsetService, PersonalinformationService infoService, ItemItemsetService itemItemSetService, TeacherService teacherService, TStudentService studentService) {
         this.clazzTeacherService = clazzTeacherService;
         this.itemService = itemService;
         this.clazzService = clazzService;
         this.teacherTopicsetService = teacherTopicsetService;
         this.itemsetService = itemsetService;
+        this.infoService = infoService;
+        this.itemItemSetService = itemItemSetService;
+        this.teacherService = teacherService;
+        this.studentService = studentService;
     }
 
 
-    @GetMapping("/info")
+    @PostMapping("/info")
     public Map<String, Object> getTeacherInfo(@RequestBody Map<String, Object> params) throws Exception {
-        String teacherId = (String) params.get("teacherId");
+        String teacherId = String.valueOf(params.get("teacherId"));
         if (teacherId == null || teacherId.isEmpty()) {
             throw new Exception("TeacherId is requireNonNullElseGet");
         }
         Map<String, Object> infoMap = new HashMap<>(8);
         List<Clazz> clazzList = getClazzList(teacherId);
-
 
         infoMap.put("clazzList", clazzList);
         infoMap.put("clazzNum", clazzList.size());
@@ -69,10 +81,62 @@ public class TeacherController {
         infoMap.put("itemList", itemList);
         infoMap.put("itemNum", itemList.size());
 
+        Personalinformation teacherInfo = getTeacherInfo(teacherId);
+        infoMap.put("info", teacherInfo);
+
+        LambdaQueryWrapper<Teacher> teacherWrapper = new LambdaQueryWrapper<>();
+        teacherWrapper.eq(Teacher::getTeacherId, teacherId);
+        Teacher teacher = teacherService.getOne(teacherWrapper);
+        teacher = Optional.ofNullable(teacher).orElse(new Teacher());
+        infoMap.put("teacherName", teacher.getTeacherName());
         return infoMap;
     }
 
 
+    @PostMapping("/clazzInfo")
+    public Map<String, Object> getClassInfo(@RequestBody Map<String, Object> params) throws Exception {
+        String teacherId = String.valueOf(params.get("teacherId"));
+        if (teacherId == null || teacherId.isEmpty()) {
+            throw new Exception("TeacherId is requireNonNullElseGet");
+        }
+        List<Clazz> clazzList = getClazzList(teacherId);
+        List<String> clazzNoList = clazzList.stream().map(Clazz::getClazzNo).collect(Collectors.toList());
+
+        LambdaQueryWrapper<Personalinformation> queryWrapper = new LambdaQueryWrapper<>();
+        queryWrapper.in(Personalinformation::getClazzNo, clazzNoList);
+        List<Personalinformation> infoList = infoService.list(queryWrapper);
+        infoList = Optional.ofNullable(infoList).orElse(new ArrayList<>());
+        List<Long> studentIdList = infoList.stream().map(Personalinformation::getStudentId).collect(Collectors.toList());
+
+        LambdaQueryWrapper<TStudent> queryStudent = new LambdaQueryWrapper<>();
+        queryStudent.in(TStudent::getStudentId, studentIdList);
+        List<TStudent> studentList = studentService.list(queryStudent);
+
+        Map<String, Object> res = new HashMap<>(16);
+        List<Object> list = new ArrayList<>();
+        clazzList.forEach(v -> {
+            List<JSONObject> cl = new ArrayList<>();
+            studentList.forEach(s -> {
+               if(v.getClazzNo().equals(s.getClazzNo())){
+                   JSONObject r = new JSONObject();
+                   r.put("studentId", s.getStudentId());
+                   r.put("studentName", s.getStudentName());
+                   r.put("clazzNo",s.getClazzNo());
+                   cl.add(r);
+               }
+            });
+            list.add(cl);
+        });
+        res.put("students",list);
+        return res;
+    }
+
+
+    private Personalinformation getTeacherInfo(String teacherId) {
+        LambdaQueryWrapper<Personalinformation> teacherInfoWrapper = new LambdaQueryWrapper<>();
+        teacherInfoWrapper.eq(Personalinformation::getTeacherId, teacherId);
+        return infoService.getOne(teacherInfoWrapper);
+    }
 
     @NotNull
     private List<Itemset> getItemSetList(String teacherId) {
@@ -80,7 +144,7 @@ public class TeacherController {
         wrapperOfTeacherTopicSet.eq(TeacherTopicset::getTeacherId, teacherId);
         List<TeacherTopicset> itemIdList = teacherTopicsetService.list(wrapperOfTeacherTopicSet);
         itemIdList = Optional.ofNullable(itemIdList).orElse(new ArrayList<>());
-        List<Long> list = itemIdList.stream().map(TeacherTopicset::getItemsetId).toList();
+        List<Long> list = itemIdList.stream().map(TeacherTopicset::getItemsetId).collect(Collectors.toList());
         LambdaQueryWrapper<Itemset> wrapper = new LambdaQueryWrapper<>();
         wrapper.in(Itemset::getItemsetId, list);
         List<Itemset> itemSetList = itemsetService.list(wrapper);
@@ -92,10 +156,10 @@ public class TeacherController {
     private List<Clazz> getClazzList(String teacherId) {
         LambdaQueryWrapper<ClazzTeacher> wrapperOfClazzTeacher = new LambdaQueryWrapper<>();
         wrapperOfClazzTeacher.eq(ClazzTeacher::getTeacherId, teacherId);
-        var clazzNoList = clazzTeacherService.list(wrapperOfClazzTeacher);
+        List<ClazzTeacher> clazzNoList = clazzTeacherService.list(wrapperOfClazzTeacher);
         //可能报空指针异常
         clazzNoList = Optional.ofNullable(clazzNoList).orElse(new ArrayList<>());
-        List<String> list = clazzNoList.stream().map(ClazzTeacher::getClazzNo).toList();
+        List<String> list = clazzNoList.stream().map(ClazzTeacher::getClazzNo).collect(Collectors.toList());
         LambdaQueryWrapper<Clazz> wrapperOfClazz = new LambdaQueryWrapper<>();
         wrapperOfClazz.in(Clazz::getClazzNo, list);
         List<Clazz> clazzList = clazzService.list(wrapperOfClazz);
@@ -104,12 +168,21 @@ public class TeacherController {
     }
 
     @NotNull
-    private List<Item> getItemList(String teacherId){
+    private List<Item> getItemList(String teacherId) {
         LambdaQueryWrapper<Item> wrapper = new LambdaQueryWrapper<>();
+        LambdaQueryWrapper<ItemItemset> wrapper1 = new LambdaQueryWrapper<>();
+        LambdaQueryWrapper<TeacherTopicset> teacherTopicSetLambdaQueryWrapper = new LambdaQueryWrapper<>();
+
+        teacherTopicSetLambdaQueryWrapper.eq(TeacherTopicset::getTeacherId, teacherId);
+        wrapper1.in(ItemItemset::getItemsetId, teacherTopicsetService.list(teacherTopicSetLambdaQueryWrapper));
+
+        wrapper.in(Item::getItemId, itemItemSetService.list(wrapper1).stream().map(ItemItemset::getItemId).collect(Collectors.toList()));
+
         List<Item> list = itemService.list(wrapper);
         list = Optional.ofNullable(list).orElse(new ArrayList<>());
         return list;
     }
+
 
 }
 
